<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_books"
        android:title="@string/button_books"
        android:icon="@drawable/ic_books" />

    <item
        android:id="@+id/nav_forum"
        android:title="@string/button_forum"
        android:icon="@drawable/ic_forum" />

    <item
        android:id="@+id/nav_exchange"
        android:title="@string/button_exchange"
        android:icon="@drawable/ic_exchange" />

    <item
        android:id="@+id/nav_reserve"
        android:title="@string/button_reserve"
        android:icon="@drawable/ic_reserve" />

    <item
        android:id="@+id/nav_account"
        android:title="@string/button_account"
        android:icon="@drawable/ic_account" />

</menu>