<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackgroundLight"
    tools:context=".mvvm.views.ui.pages.reserve.ReserveLibraryPageFragment">

    <LinearLayout
        android:id="@+id/layout_fragment_reserve_findBooks_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/plug_libraryName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/plug_libraryAddress"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="@font/rubik"
            android:textSize="22sp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_fragment_reserve_booksCount"
        android:layout_below="@+id/layout_fragment_reserve_findBooks_buttons"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <LinearLayout
            android:id="@+id/layout_fragment_reserve_findBooks_findBooksButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_fragment_reserve_booksCount"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true" >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grayBackgroundLight" />

        <TextView
            android:id="@+id/textView_fragment_reserve_booksCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik"
            android:text="@string/plug_booksCount"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_fragment_forum_createClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/button"
            android:text="@string/buttons_reserveBooks"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik"/>
    </RelativeLayout>

</RelativeLayout>