<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackgroundLight"
    tools:context=".ui.pages.forum.ForumCreateDiscussionFragment">

    <TextView
        android:id="@+id/textView_fragment_forum_createDiscussion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/subtitle_createDiscussion"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <FrameLayout
        android:id="@+id/layout_fragment_forum_mainPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView_fragment_forum_createDiscussion">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/grayBackgroundLight"/>
        <RelativeLayout
            android:id="@+id/textView_fragment_forum_createDiscussion_parameters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp" >

            <FrameLayout
                android:id="@+id/layout_fragment_forum_setDiscussionName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="15dp" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@color/grayBackground" />

                <EditText
                    android:id="@+id/editText_fragment_forum_setClubName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/hint_discussionName"
                    android:textColorHint="@color/grayForeground" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/layout_fragment_forum_setDiscussionTags"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/layout_fragment_forum_setDiscussionName"
                android:layout_marginHorizontal="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@color/grayBackground" />

                <EditText
                    android:id="@+id/editText_fragment_forum_setClubTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/hint_discussionTags"
                    android:textColorHint="@color/grayForeground" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/layout_fragment_forum_setDiscussionMessage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@+id/layout_fragment_forum_setDiscussionTags"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@color/grayBackground" />

                <EditText
                    android:id="@+id/editText_fragment_forum_setClubDiscussion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="15dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_clubDescription"
                    android:textColorHint="@color/grayForeground" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_registration_doneRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@color/button"
                android:text="@string/buttons_doneCreateDiscussion"
                android:textColor="@color/black" />

        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>